# pokemon-cli

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: app.rs  assets.rs  main.rs  pokemon.rs  pokemon_data.rs  pokemon_printer.rs
src/assets/: mod.rs
src/cli/: args.rs  language.rs  mod.rs
src/pokemon/: mod.rs  model.rs  random.rs
