[package]
name = "pokemon"
version = "1.0.0"
edition = "2021"
authors = ["Xiang Li <xiang.li@talkdesk.com>"]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.22"
image = "0.23"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
viuer = "0.4"
rust-embed = "6.4"
thiserror = "1.0"
